# opengl-setup-cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
